tests/NormalTests/paczka1/fuzzy1/20910288.err
Error in line 4: BEtM A869 0,8
Error in line 12: 3595YOJ A869 67,2
Error in line 23: sPj A869 66,9
Error in line 28: qVqk2e S501 51,1
Error in line 36: BEtM S501 62,6
